# ChangeLog for sys-apps/portage
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  27 Aug 2009; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.00.14160.ebuild:
  Add back old style way to retrieve rootuser, for those who don't have an
  up-to-date Portage yet

*portage-2.2.00.14160 (26 Aug 2009)

  26 Aug 2009; Fabian Groffen <grobian@gentoo.org>
  -files/portage-2.2.00.13683-prefix-chaining.patch,
  -portage-2.2.00.14153-r1.ebuild,
  -files/portage-2.2.00.14153-imports.patch, +portage-2.2.00.14160.ebuild:
  Version bump with appropriate fixes for dispatch-conf (replaces imports
  patch)

*portage-2.2.00.14153-r1 (26 Aug 2009)

  26 Aug 2009; Markus Duft <mduft@gentoo.org> -portage-2.2.00.14153.ebuild,
  +portage-2.2.00.14153-r1.ebuild,
  +files/portage-2.2.00.14153-imports.patch:
  added patch to fix dispatch-conf and quickpkg - imports where wrong

*portage-2.2.00.14153 (24 Aug 2009)

  24 Aug 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.13830.ebuild, +portage-2.2.00.14153.ebuild:
  Quantum leap jump, this version resembles version 2.2_rc40+

  19 Aug 2009; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.00.13878.ebuild:
  update eselect-news dependency to be able to deal with eselect-1.2

*portage-2.2.00.13878 (03 Aug 2009)

  03 Aug 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.13876.ebuild, +portage-2.2.00.13878.ebuild:
  Replace broken version by new one, fixing bug #280189 (setsid script not
  Prefix-aware), and the backtrace in comment 21 of bug #279550

*portage-2.2.00.13876 (02 Aug 2009)

  02 Aug 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.13683.ebuild, +portage-2.2.00.13876.ebuild:
  Version bump, fixes bug #279550

*portage-2.2.00.13849 (22 Jul 2009)

  22 Jul 2009; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.00.13849.ebuild:
  Version bump, fix bug #278373, add preserve-libs support for Interix and
  Windows

  22 Jul 2009; Fabian Groffen <grobian@gentoo.org>